# rwml

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  fuzz.yml  release.yml
assets/: blank.docx
corpus/public/: ATTRIBUTION.md  MANIFEST.tsv  PROVENANCE.md  README.md  RENDER_MANIFEST.tsv
corpus/public/benchmark/: LEGACY_MANIFEST.tsv  README.md
corpus/public/benchmark/sample/: floating_text_bearing.doc  floating_wrap_policy.doc  nested_tables.doc
corpus/public/benchmark/sample-lo/: floating_text_bearing.txt  floating_wrap_policy.txt  nested_tables.txt
corpus/public/benchmark/sample-poi/: floating_text_bearing.poi.txt  floating_wrap_policy.poi.txt  nested_tables.poi.txt
corpus/public/synthetic/: comments.docx  fields.docx  floating_altcontent_anchor.docx  floating_text_bearing.docx  floating_wrap_policy.docx  floating_z_order_pair.docx  hyperlinks.docx  kitchen_sink.docx  nested_tables.docx  pagination-keep.docx  revisions.docx  rtl-table.docx  style-hidden-tabs-table.docx  two-columns.docx  unsupported_objects.docx  wrap-top-bottom.docx
docs/: prd-rdoc-native-word-engine.md  prd-rdoc-write-edit.md  roadmap-rdoc-native-word-engine.md  trd-rdoc-native-word-engine.md  trd-rdoc-write-edit.md
examples/: convert.rs  diagnose.rs  extract.rs  report.rs  robustness.rs  roundtrip.rs  to_docx.rs  to_pdf.rs  validate_edit.rs
examples/wasm-demo/: README.md  index.html  report-format.mjs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: edit.rs  parse.rs  render.rs
rdoc-fonts/: Cargo.toml  PROVENANCE.md
rdoc-fonts/scripts/: make_font_subset.py
rdoc-fonts/src/: lib.rs
rwml-fonts/: Cargo.toml  PROVENANCE.md  README.md
rwml-fonts/scripts/: make_font_subset.py  make_rtl_font_subsets.py
rwml-fonts/src/: lib.rs
scripts/: bench_vs_mature.py  gen_public_corpus.py  public_hygiene_audit.py  publish_crate.py  release_manifest.py  render_validate.py  validate_edit_check.py
src/: annotation.rs  assemble.rs  builder.rs  chpx.rs  clx.rs  error.rs  ffn.rs  fib.rs  image.rs  lib.rs  list.rs  metafile.rs  model.rs  numfmt.rs  ole.rs  opc.rs  papx.rs  render.rs  report.rs  stsh.rs  table.rs  text.rs  util.rs  wasm.rs  xmltree.rs
src/docx/: body.rs  comments.rs  fields.rs  inline_text.rs  mod.rs  numbering.rs  revisions.rs  styles.rs  xml_text.rs
src/docx/fields/: display.rs  document_info.rs  formula.rs  legacy_form.rs  note_ref.rs  page_ref.rs  reference.rs  section.rs  style_ref.rs  table_formula.rs  toc.rs
src/export/: html.rs  markdown.rs  mod.rs
src/write/: docx.rs  mod.rs  opc.rs
tests/: authoring.rs  bundled_fonts.rs  cli.rs  comments.rs  edit.rs  edit_session.rs  fields.rs  header_footer.rs  layout_pages.rs  metadata.rs  noteref_numbering.rs  performance.rs  public_corpus.rs  ref_numeric_picture.rs  report.rs  report_json_contract.rs  revisions.rs  shapes.rs  style_inheritance.rs  test_bench_vs_mature.py  test_ci_workflow.py  test_fuzz_workflow.py  test_gen_public_corpus.py  test_public_hygiene_audit.py  test_publish_crate.py  test_release_manifest.py  test_release_workflow.py  test_render_validate.py  wasm.rs  wasm_demo.rs  wasm_demo_report_format.mjs  wasm_node_smoke.cjs
tests/golden/: document-report-v1.json  render-report-v1.json
