# cargo-fuzz harness — run with `cargo +nightly fuzz run parse` (Linux/macOS).
# `[workspace]` detaches this from any parent workspace.
[package]
name = "rdoc-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rdoc]
path = ".."
features = ["docx", "render"]

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "render"
path = "fuzz_targets/render.rs"
test = false
doc = false
bench = false
