[package]
name = "rwml-fonts"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "OFL-1.1"
description = "Bundled OFL font subset (Noto Sans KR, KS X 1001) for rwml's PDF renderer"
repository = "https://github.com/HyunjoJung/rwml"
readme = "README.md"
include = [
    "src/**",
    "fonts/NotoSansKR-rwml-subset.ttf",
    "fonts/NotoSansKR-rwml-subset-full.ttf",
    "OFL.txt",
    "PROVENANCE.md",
    "README.md",
    "scripts/make_font_subset.py",
]

[lib]
crate-type = ["rlib"]
