[package]
name = "rwml-fonts"
version = "0.1.1"
edition = "2021"
rust-version = "1.74"
license = "OFL-1.1"
description = "Bundled OFL Noto Sans subsets for rwml's PDF renderer"
repository = "https://github.com/HyunjoJung/rwml"
readme = "README.md"
include = [
    "src/**",
    "fonts/NotoSansKR-rwml-subset.ttf",
    "fonts/NotoSansKR-rwml-subset-full.ttf",
    "fonts/NotoSansArabic-rwml-subset.ttf",
    "fonts/NotoSansHebrew-rwml-subset.ttf",
    "OFL.txt",
    "OFL-NotoSansArabic.txt",
    "OFL-NotoSansHebrew.txt",
    "PROVENANCE.md",
    "README.md",
    "scripts/make_font_subset.py",
    "scripts/make_rtl_font_subsets.py",
]

[lib]
crate-type = ["rlib"]
